Chapter_02_Basics/1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: log-writer
          image: bachthyaglx/log-writer:v1
          volumeMounts: # Mount volume
            - name: shared-logs
              mountPath: /usr/src/app/data
        - name: log-reader
          image: bachthyaglx/log-reader:v1
          volumeMounts: # Mount volume
            - name: shared-logs
              mountPath: /usr/src/app/data
